--- a/PootCal/PootCal/CAL/View/Base.lproj/CAL_VC.storyboard
+++ b/PootCal/PootCal/CAL/View/Base.lproj/CAL_VC.storyboard
@@ -248,15 +248,6 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pGz-FR-KeU">
-                                                <rect key="frame" x="117" y="32" width="56" height="22"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="22" id="ukk-O6-xur"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hl1-F3-6LP">
                                                 <rect key="frame" x="127" y="62" width="36" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
@@ -316,16 +307,25 @@
                                                     <constraint firstAttribute="width" constant="198.5" id="ck4-O0-7gJ"/>
                                                 </constraints>
                                             </stackView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pGz-FR-KeU">
+                                                <rect key="frame" x="111" y="31" width="72" height="24"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="24" id="ukk-O6-xur"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="ZSA-zd-uJV" firstAttribute="top" secondItem="erW-LO-kVm" secondAttribute="bottom" constant="37" id="0tu-rl-zx5"/>
                                             <constraint firstItem="ZSA-zd-uJV" firstAttribute="leading" secondItem="MRP-KZ-M8Q" secondAttribute="leading" constant="15" id="5ie-Cn-sSH"/>
-                                            <constraint firstItem="pGz-FR-KeU" firstAttribute="centerX" secondItem="MRP-KZ-M8Q" secondAttribute="centerX" id="9YT-7K-VC5"/>
-                                            <constraint firstItem="Hl1-F3-6LP" firstAttribute="top" secondItem="pGz-FR-KeU" secondAttribute="bottom" constant="8" id="DCZ-JC-Ggr"/>
+                                            <constraint firstItem="pGz-FR-KeU" firstAttribute="centerX" secondItem="MRP-KZ-M8Q" secondAttribute="centerX" constant="2" id="9YT-7K-VC5"/>
+                                            <constraint firstItem="Hl1-F3-6LP" firstAttribute="top" secondItem="pGz-FR-KeU" secondAttribute="bottom" constant="7" id="DCZ-JC-Ggr"/>
                                             <constraint firstItem="bol-DV-IdC" firstAttribute="top" secondItem="AU1-cI-wdU" secondAttribute="bottom" constant="33" id="F9x-5R-aNg"/>
                                             <constraint firstItem="91y-36-nQV" firstAttribute="top" secondItem="ZSA-zd-uJV" secondAttribute="bottom" constant="29" id="GIH-yG-VNZ"/>
-                                            <constraint firstItem="pGz-FR-KeU" firstAttribute="leading" secondItem="erW-LO-kVm" secondAttribute="trailing" constant="53" id="GZc-Aa-emp"/>
+                                            <constraint firstItem="pGz-FR-KeU" firstAttribute="leading" secondItem="erW-LO-kVm" secondAttribute="trailing" constant="47" id="GZc-Aa-emp"/>
                                             <constraint firstItem="ZSA-zd-uJV" firstAttribute="centerX" secondItem="MRP-KZ-M8Q" secondAttribute="centerX" id="K3c-q6-rc3"/>
                                             <constraint firstItem="Hl1-F3-6LP" firstAttribute="centerX" secondItem="MRP-KZ-M8Q" secondAttribute="centerX" id="MFH-dM-5pz"/>
                                             <constraint firstAttribute="trailing" secondItem="bol-DV-IdC" secondAttribute="trailing" id="MQK-iO-3us"/>
@@ -334,7 +334,7 @@
                                             <constraint firstItem="91y-36-nQV" firstAttribute="leading" secondItem="MRP-KZ-M8Q" secondAttribute="leading" constant="49" id="Zwq-bE-zMb"/>
                                             <constraint firstItem="erW-LO-kVm" firstAttribute="top" secondItem="MRP-KZ-M8Q" secondAttribute="top" constant="35" id="c18-xY-8Mj"/>
                                             <constraint firstItem="AU1-cI-wdU" firstAttribute="leading" secondItem="MRP-KZ-M8Q" secondAttribute="leading" constant="47" id="dKk-XN-5AL"/>
-                                            <constraint firstItem="pGz-FR-KeU" firstAttribute="top" secondItem="MRP-KZ-M8Q" secondAttribute="top" constant="32" id="f7Z-n5-h3e"/>
+                                            <constraint firstItem="pGz-FR-KeU" firstAttribute="top" secondItem="MRP-KZ-M8Q" secondAttribute="top" constant="31" id="f7Z-n5-h3e"/>
                                             <constraint firstAttribute="bottom" secondItem="bol-DV-IdC" secondAttribute="bottom" constant="23" id="hjk-W0-865"/>
                                             <constraint firstAttribute="trailing" secondItem="AU1-cI-wdU" secondAttribute="trailing" constant="44.5" id="pu4-un-94S"/>
                                             <constraint firstItem="erW-LO-kVm" firstAttribute="leading" secondItem="MRP-KZ-M8Q" secondAttribute="leading" constant="47" id="te8-us-PUg"/>
@@ -371,8 +371,11 @@
                         <viewLayoutGuide key="safeArea" id="dHK-61-XOj"/>
                     </view>
                     <connections>
+                        <outlet property="dateLabel" destination="Hl1-F3-6LP" id="Ihh-vt-OTT"/>
                         <outlet property="gmvNib" destination="bol-DV-IdC" id="vpL-IC-b0Y"/>
                         <outlet property="outerView" destination="3j3-ic-yPg" id="tSd-US-8MC"/>
+                        <outlet property="stsLabel" destination="pGz-FR-KeU" id="pQ6-gw-vfO"/>
+                        <outlet property="stsNotationLabel" destination="erW-LO-kVm" id="BEs-mc-56k"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Agy-hn-Gfh" userLabel="First Responder" sceneMemberID="firstResponder"/>
